[package]
name = "toml-migrate"
version = "0.1.0"
edition = "2021"
description = "Automatically migrate versioned config files to the latest version"
repository = "https://github.com/ravenclaw900/toml-migrate"
license = "MIT OR Apache-2.0"
keywords = ["toml", "config", "migrate"]
categories = ["config"]

[dependencies]
basic-toml = "0.1.10"
serde = "1.0.210"

[dev-dependencies]
serde = { version = "1.0.210", features = ["derive"] }
